fixed the horizontal scrolling

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,16 +2,12 @@
   --minus: 200px;
 }
 
-html {
-  overflow-x: hidden;
-  font-size: 17px;
-}
-
 body{
   background-color: rgb(227, 231, 233);
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 #header{
